--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-<link rel="stylesheet" type="text/css" href="{{ '/static/css/article-list.css' | prepend: site.baseurl | prepend: site.url}}" />
-
+<!-- 
 <div class="row index">
   <div class="col-sm-10 col-sm-offset-1 col-lg-9 col-lg-offset-1_5">
       <div>
@@ -51,5 +50,33 @@ layout: default
               </ul>
           </nav>
       </div>
+  </div>
+</div> -->
+
+
+<div class="row">
+  <div class="col-md-9 mb-2">
+    <ul class="list-group ">
+      <li class="list-group-item">
+        {% for post in paginator.posts %}
+        <a href="{{ site.baseurl | prepend: site.url  }}/archive/#{{ post.date | date: '%Y-%m-%d' }}">
+          <h3 v-text="item.title">{{ post.date | date: "%Y-%m-%d" }}</h3>
+        </a>
+        <div class="article-synopsis" style="color: #5f5a5a;">{{ item.synopsis }}</div>
+        <div>
+          <span class="date-color">{{ item.createTime }}</span>
+          <span class="date-color"> . {{ item.category.name }}</span>
+          {% for tag in post.tags %}
+          <a class="word-keep" href="{{ site.baseurl | prepend: site.url }}/tags/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a>
+          {% endfor %}
+        </div>
+        {% endfor %}
+      </li>
+      
+    </ul>
+  </div>
+  <div class="col-md-3 mb-2">
+    <notice></notice>
+    <info></info>
   </div>
 </div>
