--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@ layout: default
         </a>
         <div class="article-synopsis" style="color: #5f5a5a;">{{ item.synopsis }}</div>
         <div>
-          <span class="date-color">{{ item.createTime }}</span>
+          <span class="date-color">{{ post.date | date: '%Y-%m-%d' }}</span>
           <span class="date-color"> . {{ item.category.name }}</span>
           {% for tag in post.tags %}
-          <a class="word-keep" href="{{ site.baseurl | prepend: site.url }}/tags/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a>
+          <a class="word-keep" href="{{ site.baseurl | prepend: site.url }}/tags/#{{ tag }}">
+            <span>&nbsp;{{ tag }}</span>
+          </a>
           {% endfor %}
         </div>
       </li>
