--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ layout: default
       {% for post in paginator.posts %}
       <li class="list-group-item">
         <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">
-          <h3>{{ post.title }}</h3>
+          <h4>{{ post.title }}</h4>
         </a>
-        <div class="article-synopsis" style="color: #5f5a5a;">{{ item.synopsis }}</div>
+        <div>{% if post.excerpt.size > 32 %}{{ post.excerpt }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 160 }}{% endif %}</div>
         <div>
           <span class="date-color">{{ post.date | date: '%Y-%m-%d' }}</span>
           <span class="date-color"> . {{ item.category.name }}</span>
