--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@ layout: default
     </ul>
   </div>
   <div class="col-md-3 mb-2">
-    <notice></notice>
-    <info></info>
+    {% include head.html %}
   </div>
 </div>
