--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@ layout: default
     </ul>
   </div>
   <div class="col-md-3 mb-2">
-    {% include head.html %}
+    {% include all.md %}
   </div>
 </div>
